--- a/src/components/progressbar/progress.scss
+++ b/src/components/progressbar/progress.scss
@@ -1,8 +1,15 @@
 .progress-bar {
-  width: 150px;
-  height: 50%;
   margin: auto;
-  margin-top: 300px;
+
+  top: 80px;
+  width: 25%;
+  overflow: hidden;
+  position: absolute;
+  left: 300px;
+  // width: 150px;
+  // height: 50%;
+  // margin: auto;
+  // margin-top: 300px;
   .progress-red {
     .CircularProgressbar-path {
       stroke: red !important;
@@ -19,11 +26,11 @@
     }
   }
 
-  @media (min-width: 412px) and (max-width: 500px) {
-    margin-top: 230px;
-  }
+  // @media (min-width: 412px) and (max-width: 500px) {
+  //   margin-top: 230px;
+  // }
 
-  @media (min-width: 750px) and (max-width: 912px) {
-    margin-top: 300px;
-  }
+  // @media (min-width: 750px) and (max-width: 912px) {
+  //   margin-top: 300px;
+  // }
 }
