--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,7 +1,17 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   width: 100%;
-  //   background-color: rebeccapurple;
+  // background-color: rebeccapurple;
+}
+.backdrop-blur {
+  // backdrop-filter: blur(10px);
+}
+.spinner,
+.progress-bar {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
