--- a/src/components/progressbar/progress.scss
+++ b/src/components/progressbar/progress.scss
@@ -1,36 +1,43 @@
 .progress-bar {
   margin: auto;
-
+  display: flex;
+  align-items: center;
+  text-align: center;
   top: 80px;
-  width: 25%;
+  width: 50%;
   overflow: hidden;
-  position: absolute;
-  left: 300px;
-  // width: 150px;
-  // height: 50%;
-  // margin: auto;
-  // margin-top: 300px;
-  .progress-red {
-    .CircularProgressbar-path {
-      stroke: red !important;
-    }
-  }
-  .progress-yellow {
-    .CircularProgressbar-path {
-      stroke: yellow !important;
-    }
-  }
-  .progress-green {
-    .CircularProgressbar-path {
-      stroke: green !important;
-    }
-  }
-
-  // @media (min-width: 412px) and (max-width: 500px) {
-  //   margin-top: 230px;
-  // }
-
-  // @media (min-width: 750px) and (max-width: 912px) {
-  //   margin-top: 300px;
-  // }
 }
+
+.progress-red {
+  .CircularProgressbar-path {
+    stroke: red !important;
+  }
+  .CircularProgressbar-text {
+    fill: red;
+  }
+}
+
+.progress-yellow {
+  .CircularProgressbar-path {
+    stroke: yellow !important;
+  }
+
+  .CircularProgressbar-text {
+    fill: yellow !important;
+  }
+}
+
+.progress-green {
+  .CircularProgressbar-path {
+    stroke: green !important;
+  }
+  .CircularProgressbar-text {
+    fill: green !important;
+  }
+}
+//   margin-top: 230px;
+//
+
+// @media (min-width: 750px) and (max-width: 912px) {
+//   margin-top: 300px;
+// }
