--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,4 +3,17 @@
   flex-direction: column;
   height: 100vh;
   width: 100%;
+
+  .modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    z-index: 10;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.815);
+  }
 }
