set value to be empty

--- a/src/components/searchbar/Search.scss
+++ b/src/components/searchbar/Search.scss
@@ -75,9 +75,19 @@
     width: 400px;
     height: 400px;
     text-align: center;
+    position: relative;
 
-    h1 {
+    h2 {
       margin-bottom: 30px;
+    }
+
+    .absolute{
+      position: absolute;
+      top: 15px ;
+      right: 10px;
+      width: 30px;
+      height: 30px;
+      cursor: pointer;
     }
   }
 }
